# unique-stocks

./: LICENSE  README.md  makefile  unique-stocks.code-workspace
services/lakehouse/: .pyiceberg.yaml  makefile  pyproject.toml
services/lakehouse/config/metastore/template/: core-site.xml  hive-site.xml  metastore-site.xml
services/lakehouse/docker/: Dockerfile  docker-compose.yml
services/lakehouse/scripts/db/: 01-init-db.sh
services/lakehouse/scripts/metastore/: config.sh
services/pipelines/: .dockerignore  .flake8  .gitignore  .mypy.ini  .prettierrc  .pylintrc  Dockerfile  Pipfile  README.md  docker-compose.yml  makefile  pyproject.toml  requirements.txt
services/pipelines/Docker/: Dockerfile  Dockerfile.prod  docker-compose.prod.yml  docker-compose.yml
services/pipelines/dags/: clean_temp.py  create_iceberg_tables.py  entity.py  entity_isin.py  exchange.py  fundamental.py  fundamental_focus_securities.py  fundamental_groupA.py  fundamental_groupB.py  index_member.py  quote_historical.py  quote_historical_focus_securities.py  quote_performance.py  quote_update.py  security.py  test.py
services/pipelines/dags/spark/: ddl.py  extract_latest_date_by_exchange.py  seed_tables.py  sink_entity.py  sink_entity_isin.py  sink_exchange.py  sink_fundamental.py  sink_security.py  sink_security_quote.py  test.py  transform_security_quote.py
services/pipelines/dags/spark/spark_utils/: path.py
services/pipelines/dags/sql/entity/: transform.sql
services/pipelines/dags/sql/entity_isin/: transform.sql
services/pipelines/dags/sql/exchange/: transform.sql
services/pipelines/dags/sql/historical_quote/: transform.sql
services/pipelines/dags/sql/index_member/: transform.sql
services/pipelines/dags/sql/quote_historical/: transform.sql
services/pipelines/dags/sql/quote_performance/: transform.sql
services/pipelines/dags/sql/quote_update/: transform.sql
services/pipelines/dags/sql/security/: transform.sql
services/pipelines/debug/: data_lake_client.py  debug.py  dl_client.py  fundamental.py  path.py  sql.py  test.py
services/pipelines/deploy/: deploy-files.conf
services/pipelines/include/conf/spark/: config.py  packages.py
services/pipelines/include/settings/: __init__.py  settings.py
services/pipelines/include/shared/: airflow_dataset.py  connections.py  data_lake_path.py  path.py  schema.py  types.py
services/pipelines/include/utils/connection/: export.py
services/pipelines/include/utils/dag/: conf.py  xcom.py
services/pipelines/include/utils/file/: stream.py  type.py  unzip.py
services/pipelines/include/utils/filesystem/: directory.py  path.py  storage.py
services/pipelines/include/utils/parallel/: asyncio.py  concurrent.py
services/pipelines/pipelines/: main.py  sql.sql  test_notebook.py  test_notebook2.py
services/pipelines/pipelines/config/: log_config.py
services/pipelines/pipelines/dags/: etl.py  exchanges.py  test.py
services/pipelines/pipelines/dags/entity/: dag.py  path.py
services/pipelines/pipelines/dags/exchange/: dag.py  path.py
services/pipelines/pipelines/dags/exchanges/: exchange_detail.py  exchange_list.py  exchange_members.py  exchanges.py
services/pipelines/pipelines/dags/fundamental/: dag.py
services/pipelines/pipelines/dags/index/: dag.py
services/pipelines/pipelines/dags/index_member/: dag.py  path.py
services/pipelines/pipelines/dags/indices/: index_members.py  indices.py
services/pipelines/pipelines/dags/quote/: dag.py  path.py
services/pipelines/pipelines/dags/reference/: config.py
services/pipelines/pipelines/dags/securities/: test.py
services/pipelines/pipelines/dags/security/: dag.py  path.py  test2.py
services/pipelines/pipelines/dags/test/: test.py
services/pipelines/pipelines/debug/: data.py  entity.py  exchange.py  iter_file.py  logger.py  query.py  security.py  surrogate_keys.py  test.py  test1.py  testEntity.py
services/pipelines/pipelines/include/: test.py
services/pipelines/pipelines/include/config/: __init__.py  api_keys.py
services/pipelines/scripts/: airflow_init.sh  connections.sh
services/pipelines/scripts/connections/: export.sh  import.sh
services/pipelines/scripts/deploy/: deploy.sh  publish.sh
services/pipelines/scripts/docker/: build.sh
services/pipelines/scripts/variables/: export.sh  import.sh
services/pipelines/src/: main.py  test.py  transform.py
services/pipelines/src/config/: __init__.py  api_keys.py  app.py  azure.py  env.py
services/pipelines/src/jobs/: test.py
services/pipelines/testing/airflow/: airflow.cfg  airflow.db
services/pipelines/testing/connections/: variables.yaml
(+716 files in other folders)
