

[tool.poetry]
name = "uniquestocks-pipelines"
version = "0.1.0"
description = ""
authors = ["Stefan Bauer <stefanjakob.bauer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
apache-airflow-providers-microsoft-azure = "^8.5.1"
apache-airflow-providers-postgres = "^5.10.0"
apache-airflow-providers-apache-spark = "^4.7.0"
apache-airflow-providers-amazon = "^8.16.0"
apache-airflow-providers-ssh = "^3.10.0"
apache-airflow-providers-sftp = "^4.8.1"
apache-airflow-providers-apache-hive = "^7.0.0"
celery = "^5.3.6"
crypto = "^1.4.1"
asyncio = "^3.4.3"
aiohttp = "^3.9.1"
aiofiles = "^23.2.1"
pyarrow = "^14.0.2"
polars = "^0.20.5"
duckdb = "^0.9.2"
pydantic-settings = "^2.1.0"
pyiceberg = {extras = ["hive"], version = "^0.5.1"}
pandas = "^2.2.0"


[tool.poetry.group.dev.dependencies]
apache-airflow = "2.8.1"
black = "^23.12.1"
ruff = "^0.1.13"
mypy = "^1.8.0"
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
# Assume Python 3.11.
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F", "I",]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "I"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]

# Same as Black.
line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.11.
target-version = "py311"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10


[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
